<resources>

    <string name="app_name">Panorama Viewer</string>

    <!-- Default Strings -->
    <string name="str_back">Zurück</string>
    <string name="str_sorry">Sorry!</string>
    <string name="str_percent">%d %%</string>

    <!-- MainActivity -->
    <string name="activity_main_menu_settings_title">Einstellungen</string>
    <string name="activity_main_storage_request_title">Berechtigung</string>
    <string name="activity_main_storage_request_text">GardenGnome Viewer benötigt die Berechtigung zum Lesen des externen Speichers, um GGPKG-Dateien auf Deinem Gerät zu finden!\n\nWenn Du diese Berechtigung nicht gewährst, kann die App nicht in vollem Umfang genutzt werden.</string>
    <string name="activity_main_storage_request_button">Zugriff gewähren</string>
    <string name="activity_main_empty_text">Leider konnten wir auf Deinem Gerät keine passenden Dateien finden.</string>

    <!-- ViewerActivity -->
    <string name="activity_viewer_menu_fullscreen_title">Fullscreen</string>
    <string name="activity_viewer_package_error">Leider ist beim Laden des Viewers ein Fehler aufgetreten! Am besten versuchst Du es noch einmal.</string>
    <string name="activity_viewer_package_fullscreen_toast">Drücke die Zurück-Taste, um den Vollbildmodus zu beenden!</string>

    <!-- InfoActivity -->
    <string name="activity_info_title">Information</string>

    <!-- SettingsActivity -->
    <string name="activity_settings_title">Einstellungen</string>
    <string name="preference_screen_category_player">Player Einstellungen</string>
    <string name="preference_screen_category_legacy">Rechtliches</string>
    <string name="preference_screen_gyro_title">Gyroskop</string>
    <string name="preference_screen_fullscreen_title">Vollbild</string>

</resources>
